--- a/cst438_register/src/main/resources/application.properties
+++ b/cst438_register/src/main/resources/application.properties
@@ -3,7 +3,8 @@ server.servlet.session.persistent=false
 
 # gradebook service
 gradebook.url = http://localhost:8081
-gradebook.service = default
+#gradebook.service = default
+gradebook.service = REST
 # registration service
 registration.url = http://localhost:8080
 registration.service = default
