--- a/cst438_register/src/main/resources/application.properties
+++ b/cst438_register/src/main/resources/application.properties
@@ -3,9 +3,9 @@ server.servlet.session.persistent=false
 
 # gradebook service
 gradebook.url = http://localhost:8081
-#gradebook.service = default
+gradebook.service = default
 
-gradebook.service = REST
+#gradebook.service = REST
 #gradebook.service = MQ
 
 # registration service
@@ -21,3 +21,10 @@ spring.jpa.show-sql = true
 
 # debug = true
 # logging.level.org.springframework.security = TRACE
+
+# URL for redirect back to React after successful login
+frontend.post.login.url = http://localhost:3000/semester
+spring.security.oauth2.client.registration.google.client-id = 971873643835-jqejvrtn71ik9mhiq3e8cshb1cl44p9m.apps.googleusercontent.com
+spring.security.oauth2.client.registration.google.client-secret = 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
+
+
