--- a/cst438_register/src/test/resources/application.properties
+++ b/cst438_register/src/test/resources/application.properties
@@ -3,5 +3,9 @@
 #spring.datasource.url = jdbc:mysql://s29oj5odr85rij2o.cbetxkdyhwsb.us-east-1.rds.amazonaws.com:3306/fc1rm73z2swgykuv
 #spring.datasource.username = g1nxjtw25xxca0a9
 #spring.datasource.password = u5clqb8oyx8yxddo
+
 gradebook.service = default
 registration.service= default
+
+spring.security.oauth2.client.registration.google.client-id = 971873643835-jqejvrtn71ik9mhiq3e8cshb1cl44p9m.apps.googleusercontent.com
+spring.security.oauth2.client.registration.google.client-secret = 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
