--- a/cst438_register/pom.xml
+++ b/cst438_register/pom.xml
@@ -42,6 +42,14 @@
     		<optional>true</optional>
 		</dependency>
 
+		<!-- for Oauth2 -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-oauth2-client</artifactId>
+        </dependency>
+		<!-- END Oauth2 -->
+	
+
 		<!-- for rabbitmq -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
